--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styles.css">   
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">   
     <link rel="icon" type="image/png" href="">
 </head>
 <body>
